--- a/src/components/coffee-beans/coffee-beans.css
+++ b/src/components/coffee-beans/coffee-beans.css
@@ -4,7 +4,6 @@
 
 .beansLine {
     display: flex;
-    /* padding: 0 10px; */
     margin: 0 auto;
     width: 200px;
 
@@ -30,9 +29,19 @@
 }
 
 .black::after {
+    content: "";
+    width: 60px;
+    height: 0px;
+
     border: 1px solid #000000;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .black::before {
+    content: "";
+    width: 60px;
+    height: 0px;
+
     border: 1px solid #000000;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
