--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -4,3 +4,44 @@
 
     width: 100%;
 }
+
+.cardDesign {
+    width: 220px;
+    height: 240px;
+
+    background: rgba(255, 255, 255, 0.65);
+    border-radius: 8px;
+
+    margin: 30px 35px;
+}
+
+.centerItems {
+    width: 180px;
+    height: 200px;
+
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.centerItems img {
+    width: 153px;
+}
+
+.productName {
+    margin: 10px 0;
+}
+
+.price {
+    width: 100%;
+    text-align: right;
+    font-weight: 700;
+}
+
+.cardDesign:hover {
+    filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.25));
+    cursor: pointer;
+}
